--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "server": "nodemon index.js",
+    "css": "postcss ./public/css/tailwind.css -o ./public/css/app.css"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "express": "^4.21.0",
-    "pug": "^3.0.3"
+    "postcss": "^8.4.47",
+    "postcss-cli": "^11.0.0",
+    "pug": "^3.0.3",
+    "tailwindcss": "^3.4.11"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
