--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "bienesraices": "file:",
     "express": "^4.21.0",
+    "mysql2": "^3.11.3",
     "postcss": "^8.4.47",
     "postcss-cli": "^11.0.0",
     "pug": "^3.0.3",
+    "sequelize": "^6.37.3",
     "tailwindcss": "^3.4.11"
   },
   "devDependencies": {
