--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bienesraices": "file:",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-validator": "^7.2.0",
     "mysql2": "^3.11.3",
     "postcss": "^8.4.47",
     "postcss-cli": "^11.0.0",
