--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "bcrypt": "^5.1.1",
     "bienesraices": "file:",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
