--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.15",
     "postcss": "^8.4.47",
     "postcss-cli": "^11.0.0",
     "pug": "^3.0.3",
